src/index.css
/* Base Colors throughout webpage */
:root {
  --blue: #36a0a5;
  --white: #fffbf0;
  --darkblue: rgb(37, 93, 121);
}
/* ----------------------------Main Elements in order of page (top-down)------------------------- */

header {
  display: flex;
  justify-content: space-between;
  min-height: 100px;
  background-color: var(--blue);
  margin: 0;
  width: 100%;
}

body {
  margin-top: 2em;
  font-family: Arial, Helvetica, sans-serif;
}

h2 {
  text-align: center;
}

p {
  font-size: 18pt;
}

a {
  margin: 10px;
}

li {
  text-align: center;
  list-style-type: none;
  line-height: 25pt;
  font-size: 15pt;
}

/* ----------------------------Classes------------------------- */

.about-title {
  padding: 0px !important;
  display: flex;
  flex-direction: column;
}

.about-divider {
  width: 80%;
  margin-top: ;
  height: 2px;
  background-color: var(--blue);
}

.profile-pic-cont {
  padding: 0px 30px 0px 0px !important;
}

.app-links {
  margin-top: 15px;
}

.contact {
  display: inline-block;
}

.contact-info {
  align-items: center;
  width: max-content;
  font-size: 15pt;
  text-decoration: none;
  color: var(--darkblue);
}

a img:hover {
  transform: scale(1.1);
}

.mail::before {
  margin-right: 5px;
  content: "\2709";
  background-size: 100% 100%;
  display: inline-block;
  font-size: 37px;
}

.github::before {
  content: "";
  background-image: url("./lib/images/github-mark.png");
  background-size: 100% 100%;
  display: inline-block;
  height: 35px;
  width: 35px;
  margin-right: 5px;
}

.linkedin::before {
  content: "";
  background-image: url("./lib/images/linkedin.svg");
  background-size: 100% 100%;
  display: inline-block;
  height: 30px;
  width: 30px;
  margin-right: 5px;
}

.download-logo {
  margin: 0px 0px 10px 20px;
  width: 100px;
  position: relative;
  right: 10px;
  cursor: pointer;
  list-style: none;
  font-size: 40px;
  color: #0e5259;
  display: flex;
  justify-content: center;
}

.download-logo:hover {
  color: #328c83;
  opacity: 0.5;
  transition: 0.5s ease;
}

.logo {
  display: flex;
  flex-direction: column;
  align-items: center;
  font-size: 35pt;
  margin-bottom: 0.6em;
}

/* Dropdown Button */
.menu-button {
  display: flex;
  flex-direction: column;
  justify-content: center;
  position: relative;
  left: 2em;
  top: 1.7em;
  height: 3em;
  background-color: var(--blue);
  border-radius: 10px;
  border-color: var(--white);
}

/* color/dimensions for logo lines */
.menu-button-logo {
  background-color: var(--white);
  margin: 3px 5px;
  width: 1.5rem;
  height: 0.2rem;
}

/* Dropdown Content (Hidden by Default) */
.menu-content {
  margin: 0px;
  display: none;
  position: absolute;
  top: 6.3rem;
  padding: 0;
  color: var(--blue);
  background-color: var(--white);
  border-radius: 0px 30px 30px 30px;
  box-shadow: 20px 10px 20px -10px rgba(0, 0, 0, 0.2);
  list-style: none;
  z-index: 1;
}

/* Links inside the dropdown */
.menu-content a {
  font-size: 17pt;
  padding: 12px 0px 12px 0px;
  text-decoration: none;
  display: block;
}

.name-container {
  display: flex;
  align-self: flex-end;
}

.nav-item {
  margin-right: 10px;
}

.page-title-style {
  display: flex;
  justify-content: center;
}

.page-title-style h1 {
  color: var(--blue);
  text-align: center;
  margin-top: 0.5em;
  font-size: 40pt;
}

.page-title-style a {
  width: fit-content;
}

.page-section-styles {
  padding: 1em;
  margin: 1em 1em 2em 1em;
  border-radius: 10px;
  width: auto;
  height: auto;
  background-color: var(--blue);
  color: white;
}

img .profile-pic {
  width: 10px !important;
}

.proj-cont {
  padding: 0;
}

.resume-cont {
  justify-content: center;
  margin: 0px -48px !important
}

.resume-info {
  background-color: var(--white);
  border-radius: 10px;
  color: var(--blue);
}

.resume-info-title {
  padding-top: 2em;
}

.resume-list-cont {
  padding: 0;
}

.section {
  margin: 50px 0px;
  display: flex;
}

/* -------------------------ID's----------------------------  */

#content-wrap {
  padding-bottom: 4rem;
}

#footer {
  background-color: var(--blue);
  position: absolute;
  bottom: 0;
  width: 100%;
  height: auto;
}

#page-container {
  position: relative;
  min-height: 100vh;
  min-width: 100vw;
}

#github-logo {
  position: absolute;
  border: none;
  border-radius: 0;
  width: 1.7em;
  left: -2em;
  bottom: -0.1em;
}

#linkedin-logo {
  position: absolute;
  border: none;
  border-radius: 0;
  width: 1.5em;
  left: -1.8em;
  bottom: -0.1em;
}

#name {
  color: var(--white);
  padding-right: 10px;
  font-size: 40pt;
}

/* -------------HOVER--------------------------------- */

/* hovering over menu allows content to appear */
.menu:hover .menu-content {
  display: block;
}
/* hovering over each link will slightly highlight background-color */
.menu-content a:hover {
  color: var(--darkblue);
}
.contact-info:hover {
  transform: scale(1.1);
}

/* -------------------------MEDIA QUERIES-------------------------- */

@media screen and (min-width: 1200px) {
  .resume-info {
    min-width: 300px !important;
  }
}

@media screen and (min-width: 992px) {
  .resume-info {
    min-width: 260px;
  }

  .about-title h1 {
    font-size: 65pt !important;
  }
}

@media screen and (min-width: 768px) {
  .about-section {
    display: flex;
    justify-content: center;
    background-color: var(--white);
    margin: 0px;
    padding: 0px 0px;
    border-radius: 10px;
  }
  .about-header {
    display: flex;
    justify-content: end;
  }

  .about-title {
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .about-title h1 {
    text-align: center;
    font-size: 60pt;
    color: var(--blue);
  }

  .profile-pic-cont img {
    float: right;
    position: relative;
    top: 40px;
    border: 3px solid var(--blue);
    border-radius: 50%;
    width: 80%;
  }

  .about-description p {
    color: var(--darkblue);
    font-size: 18pt;
    width: 100%;
    margin-top: 20px;
  }

  .copyright {
    display: flex;
    flex-wrap: nowrap;
    margin-left: 10px;
    text-wrap: nowrap;
    align-items: center;
    text-align: center;
  }

  #name {
    font-size: 45pt;
  }

  .menu-button {
    display: none;
  }
  .menu-content {
    display: flex;
    position: relative;
    background: transparent;
    margin-left: 1em;
    top: 0.5em;
    border-radius: 40px;
    color: var(--white);
  }
  .menu:hover .menu-content {
    display: flex;
  }

  .page-section-styles {
    padding: 20px;
  }
  
  .resume-info {
    background-color: var(--white);
    border-radius: 10px;
    color: var(--blue);
    margin: 15px;
  }
}

@media screen and (max-width: 767px) {
  .about-section {
    display: flex;
    justify-content: center;
    background-color: var(--white);
    padding: 0px 0px;
    border-radius: 10px;
  }
  .about-header {
    display: flex;
    justify-content: end;
  }

  .about-title {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-left: 10px;
  }

  .about-title h1 {
    text-align: center;
    font-size: 45pt;
    color: var(--blue);
  }

  .profile-pic-cont {
    padding: 0px 10px 0px 0px !important;
  }

  .profile-pic-cont img {
    float: right;
    position: relative;
    top: 30px;
    margin-bottom: 10px;
    border: 3px solid var(--blue);
    border-radius: 50%;
    width: 90%;
  }

  .about-description p {
    color: var(--darkblue);
    font-size: 16pt;
    width: 100%;
  }

  .copyright {
    order: 1;
  }

  .menu-content {
    width: 130px;
  }
  .menu-content a {
    font-size: 15pt;
    padding: 0px;
  }
  .nav-item {
    margin: 8px;
  }

  .nav-link {
    margin: 0px 0px 0px 15px;
    text-align: start;
  }

  .nav-style-line {
    position: relative;
    left: 20px;
    width: 80px;
    height: 1px;
    background-color: var(--blue);
  }
  .page-section-styles {
    padding: 18px;
  }

  .resume-cont {
    display: inline-block;
  }
  .resume-info {
    background-color: var(--white);
    border-radius: 10px;
    color: var(--blue);
    margin: 15px;
    padding: 0;
  }

  #footer {
    display: flex;
    flex-direction: column;
  }

  #name {
    font-size: 40pt;
  }
}

@media screen and (max-width: 576px) {
  #name {
    font-size: 35pt;
  }

  .about-title h1 {
    font-size: 45pt;
  }

  .about-description p {
    font-size: 14pt;
  }

  .page-section-styles {
    padding: 14px;
  }
}

@media screen and (max-width: 400px) {
  #name {
    font-size: 30pt;
  }
  .about-title {
    margin-left: 0px;
  }

  .about-title h1 {
    font-size: 40pt;
  }

  .about-description p {
    font-size: 12pt;
  }

  .profile-pic-cont img {
    float: right;
    position: relative;
    top: 25px;
    margin-bottom: 10px;
    border: 3px solid var(--blue);
    border-radius: 50%;
    width: 85%;
  }

  .menu-button {
    position: relative;
    left: 1.3em;
    top: 1.7em;
  }
  .page-section-styles {
    padding: 12px;
  }
}

